# pantry-chef

./: .pre-commit-config.yaml  README.md
app/: .env.sample  Dockerfile  alembic.ini  docker-compose.yml  justfile  pyproject.toml
app/.just/: app-runner.just  database.just
app/alembic/: env.py
app/alembic/versions/: f67a0ce80e87_add_base_tables.py
app/pantry_chef/: base_model.py  base_schema.py  common_exceptions.py  config.py  database.py  dependencies.py  docker-compose.yml  main.py  validators.py
app/pantry_chef/ingredient/: api.py  crud.py  exceptions.py  model.py  schema.py  services.py
app/pantry_chef/instruction/: api.py  crud.py  exceptions.py  model.py  schema.py  services.py
app/pantry_chef/recipe/: api.py  crud.py  exceptions.py  model.py  schema.py
app/tests/unit/: conftest.py  test_validators.py
app/tests/unit/ingredient/: test_ingredient_api.py  test_ingredient_schema.py  test_schema.py
app/tests/unit/instruction/: test_instruction_api.py  test_schema.py
app/tests/unit/recipe/: test_model.py  test_recipe_api.py  test_recipe_schema.py  test_schema.py
